# openmic

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  claude.md  install.sh  pyproject.toml
.github/workflows/: tests.yml
archive/: README.md  test_transcribe_elevenlabs.py  transcribe_elevenlabs.py
docs/: index.html
openmic/: __init__.py  app.py  audio.py  local_transcribe.py  mcp_server.py  notes.py  rag.py  session.py  setup.py  storage.py  templates.py  transcribe.py  version.py
openmic/templates/: concise.md  default.md  executive.md  one-on-one.md  team-meeting.md  technical.md
tests/: test_app.py  test_local_transcribe.py  test_notes.py  test_rag.py  test_session.py  test_setup.py  test_storage.py  test_templates.py  test_version.py
