[project]
name = "openmic"
version = "0.1.0"
description = "CLI/TUI meeting transcription tool with live preview, diarization, and RAG querying"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.47.0",
    "sounddevice>=0.4.6",
    "scipy>=1.11.0",
    "elevenlabs>=1.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "faiss-cpu>=1.7.4",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.1.0"]
openai = ["langchain-openai>=0.0.5"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
openmic = "openmic.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel.force-include]
"openmic/templates" = "openmic/templates"
